feat: project finalized

--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -1,7 +1,7 @@
 :root {
   font-size: 60%;
 
-  --color-background: #F0F0F7;
+  --color-background: #212121;
   --color-primary-lighter: #9871F5;
   --color-primary-light: #916BEA;
   --color-primary: #8257E5;
